--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   hello_word:
-      runs-on: ubuntu:latest
+      runs-on: ubuntu-latest
       steps:
         - name: printing hello-world
           run: echo "Hello World"
