--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,12 +18,14 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: testing done here
         run: echo testing
 
   deploy:
     runs-on: ubuntu-24.04
+    needs: test
     steps:
       - name: deploying the application
         run: echo deploying 
